# shortcut_release_helper

shortcut_release_helper/: Cargo.toml  build.rs
shortcut_release_helper/src/: main.rs  shortcut.rs  types.rs
shortcut_release_helper/src/template/: mod.rs
